fix: degradar la version del JDK para hacerlo compatible con la maquina de despliegue